--- a/loginAssigment.html
+++ b/loginAssigment.html
@@ -89,7 +89,7 @@
 <br><br>
 <input type="submit" value="Login">
 <br><br>
-<center><br>Don't have an account?<br><a href="sign.html">Sign up </a> here</center>
+<center><br>Need an account?<br><a href="sign.html">Sign up </a> here</center>
 
 </form>
 </div>
